Cálculo de preço implementado

--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -21,6 +21,7 @@ Produtos da NFE:
         <td>{{produto.quantidade}}</td>
         <td>{{produto.icms}}</td>
         <td>{{produto.valorUnitario}}</td>
-        <td>{{produto.valorFinal}}</td>
+        <td><input [(ngModel)]="produto.valorFinal" (change)="atualizarMargemContribuicao(produto)"/></td>
+        <td>{{produto.margemContribuicao}}</td>
     </tr>
 </table>
