--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -1,27 +1,270 @@
-<input type="file" accept="xml/plain" (change)="openFile($event)">
-<br/><br/>
-Produtos da NFE:
-<br/>
-<br/>
-% de imposto fronteira: <input />
-<br/>
-% de frete <input />
-<br/>
-<table style="width:100%;border:1px solid black">
-    <tr>
-        <td style="width:40%">Nome</td>
-        <td style="width:5%">Qtd</td>
-        <td style="width:5%">ICMS</td>
-        <td style="width:15%">V. compra</td>
-        <td style="width:15%">V. venda</td>
-        <td style="width:15%">Margem de contribuição</td>
-    </tr>
-    <tr *ngFor="let produto of produtos">
-        <td>{{produto.descricao}}</td>
-        <td>{{produto.quantidade}}</td>
-        <td>{{produto.icms}}</td>
-        <td>{{produto.valorUnitario}}</td>
-        <td><input [(ngModel)]="produto.valorFinal" (change)="atualizarMargemContribuicao(produto)"/></td>
-        <td>{{produto.margemContribuicao}}</td>
-    </tr>
-</table>
+<p-growl [(value)]="statusMessages"></p-growl>
+<form [formGroup]="formCustos">
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+
+            <!-- Nav tabs -->
+            <ul class="nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+                <li role="presentation"><a href="#danfe" aria-controls="danfe" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-upload"></span> Importar NFE (XML)</a></li>
+                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-minus-sign"></span> Custos do produto</a></li>
+                <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-plus-sign"></span> Margem de lucro e contribuição</a></li>
+                <li role="presentation"><a href="#opas" aria-controls="opas" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-check"></span> Calcular preços</a></li>
+            </ul>
+
+            <!-- Tab panes -->
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane active" id="home">
+                    <div class="jumbotron" style="padding:45px 15px 15px">
+
+                        <h1 style="font-size:36px">Calcule facilmente o preço dos seus produtos!</h1>
+                        <p>Nosso serviço sugere automaticamente os preços de venda para todos os produtos de uma nota fiscal eletrônica - DANFE (XML).
+                        <p>É muito simples, são apenas 3 passos:</p>
+                        <ol>
+                            <li>Importe a NFE</li>
+                            <li>Informe os custos que incidem sobre os seus produtos (frete, comissão dos vendedores, entre
+                                outros)
+                            </li>
+                            <li>Informe a margem lucro e de contribuição desejada</li>
+                        </ol>
+                        <p><a href="#danfe" aria-controls="danfe" role="tab" data-toggle="tab" a class="btn btn-primary btn-lg">Comece agora mesmo, é grátis!</a></p>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="danfe">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">Importe o XML (DANFE) da sua NFE</h3>
+                        </div>
+                        <div class="panel-body">
+                            <p>Faça a <strong>importação do XML (DANFE)</strong> da sua nota fiscal eletrônica (NFE). Este arquivo,
+                                de extensão .xml, é enviado pelo seu fornecedor para o e-mail de sua empresa.
+                            </p>
+                            <h4>Importar o XML da DANFE</h4>
+                            <input type="file" accept=".xml" (change)="openFile($event)" style="margin:10px 0 10px 0">
+                            <div class="well" >
+                                <input id="agreement" type="checkbox" value="false" (change)="setAgreement($event)" name="agreement" formControlName="agreement" /><label for="agreement" style="display:inline"> <small> Concordo em utilizar este serviço sabendo que os valores calculados são sugestivos e podem conter erros. Desta forma devem ser validados pelo empresário e/ou contador da empresa, não sendo de responsabilidade desta empresa quaisquer usos indevidos do mesmo.</small></label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="messages">
+
+                    <div *ngIf="produtos.length != 0; else elseBlock">
+                        <div *ngIf="agreement != false; else elseBlockAgreement">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Informar os percentuais de valores que incidem no cálculo do produto</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <p>Alguns itens como o valor do frete, imposto de fronteira, comissão de vendedor, entre
+                                        outros devem ser considerados no cálculo do valor final do produto.</p>
+                                    <p>
+                                        <small>Você deve saber os valores de cada custo e dividir pelo valor da nota fiscal para identificar o % correspondente.<br/>
+                    Por exemplo, um valor de nota fiscal (NF)   de R$ 1.000 e um frete com custo de R$ 100 o frete corresponde a 10% desta nota fiscal.</small>
+                                    </p>
+                                    <strong>Observação:</strong> informar o valor sem o %.
+                                    <table class="table table-bordered">
+
+                                        <thead>
+                                            <tr>
+                                                <th style="width:20%">Custo</th>
+                                                <th style="width:10%">% de incidência sobre a venda</th>
+                                                <th style="width:70%">Descrição</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>Frete</td>
+                                                <td><input type="number" (keyup)="recalcularPrecos()" formControlName="frete" name="frete"
+                                                    /></td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Imposto de fronteira</td>
+                                                <td><input type="number" (keyup)="recalcularPrecos()" formControlName="fronteira" name="fronteira"
+                                                    /></td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Alíquota do simples</td>
+                                                <td><input type="number" (keyup)="recalcularPrecos()" formControlName="aliquotaSimples" name="aliquotaSimples"
+                                                    /></td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Taxas do cartão de crédito/débito</td>
+                                                <td><input type="number" (keyup)="recalcularPrecos()" formControlName="taxaCartao" name="taxaCartao"
+                                                    /></td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Comissão do vendedor</td>
+                                                <td><input type="number" (keyup)="recalcularPrecos()" formControlName="comissaoVendedor" name="comissaoVendedor"
+                                                    /></td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Despesas fixas</td>
+                                                <td><input type="number" (keyup)="recalcularPrecos()" formControlName="despesasFixas" name="despesasFixas"
+                                                    /></td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <td>Taxas adicionais</td>
+                                                <td><input type="number" (keyup)="recalcularPrecos()" formControlName="taxasAdicionais" name="taxasAdicionais"
+                                                    /></td>
+                                                <td></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <p>
+                                        Se existir um valor em R$ que queira acrescentar ao cálculo informe abaixo:<br/>
+                                        <small>Exemplo, sabendo que em média os custos da sacola utilizada em cada venda é de R$ 2,00. Basta informar o valor 2 abaixo que ele será acrescentado ao valor de cada produto.</small><br/>
+                                        <input type="number" (keyup)="recalcularPrecos()" formControlName="valorAdicional" name="valorAdicional" />
+                                    </p>
+                                </div>
+                            </div>
+
+
+                        </div>
+                    </div>
+                    <ng-template #elseBlockAgreement>
+                        <div class="well">
+                            {{agreementMessage}}
+                        </div>
+                    </ng-template>
+                    <ng-template #elseBlock>
+                        <div class="well">
+                            {{emptyDanfeMessage}}
+                        </div>
+                    </ng-template>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="settings">
+                    <div *ngIf="produtos.length != 0; else elseBlock">
+                        <div *ngIf="agreement != false; else elseBlockAgreement">
+                        <div class="panel panel-default">
+
+                            <div class="panel-heading">
+                                <h3 class="panel-title primary">Informe a margem de lucro e contribuição desejadas</h3>
+                            </div>
+                            <div class="panel-body">
+                                <p>A <strong>margem de lucro</strong> é acrescentada sobre o valor de aquisição do produto (valor
+                                    de compra + IPI + frete + fronteira). Ela deve ser informada em percentual variando de
+                                    0 a 100 sem o símbolo de %.</p>
+                                <div class="panel panel-primary">
+                                    <div class="panel-body">
+                                        Exemplo
+                                    </div>
+                                    <div class="panel-footer">
+                                        <small>
+                                        Um produto comprado a R$ 10, cujo IPI foi de 5%, o valor total do frete representa 5% do valor da nota e o imposto de fronteira é em média 10% do valor da nota, possui valor de aquisição de: R$ 10 + R$ 0,50 (IPI) + R$ 0,50 (frete) + R$ 1,00 (fronteira) = R$ 12,00. Uma margem de lucro de 20% significa R$ 12 + R$ 2,4 (20% de R$ 12).
+                                    </small>
+                                    </div>
+                                </div>
+                                <p>A <strong>margem de contribuição desejada</strong> deve ser informada de 0 a 100, representando
+                                    o % desejado.</p>
+
+
+
+                                <strong>Margem de lucro</strong><br/>
+                                <input type="number" (keyup)="recalcularPrecos()" formControlName="margemLucro" name="margemLucro" />
+                                <br/>
+                                <strong>Margem de contribuição</strong><br/>
+                                <input type="number" (keyup)="recalcularPrecos()" formControlName="margemContribuicao" name="margemContribuicao" />
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <ng-template #elseBlockAgreement>
+                        <div class="well">
+                            {{agreementMessage}}
+                        </div>
+                    </ng-template>
+                    <ng-template #elseBlock>
+                        <div class="well">
+                            {{emptyDanfeMessage}}
+                        </div>
+                    </ng-template>
+
+                </div>
+                <div role="tabpanel" class="tab-pane" id="opas">
+                    <div *ngIf="produtos.length != 0; else elseBlock">
+                        <div *ngIf="agreement != false; else elseBlockAgreement">
+                        <div class="panel panel-primary">
+                            O cálculo do valor dos produtos utiliza a seguinte fórmula:
+                            
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Preços de venda calculados para as mercadorias</h3>
+                            </div>
+                            <div class="panel-body">
+                                <div class="panel panel-primary">
+                                    <div class="panel-body">
+                                        Dica!
+                                    </div>
+                                    <div class="panel-footer">
+                                        <p>
+                                    É possível alterar o valor sugerido por nós e observar as variações na margem de contribuição.
+                                </p>
+                                    
+                                    </div>
+                                </div>
+                                
+                                <form>
+                                    <table class="table table-bordered table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th style="width:40%">Nome</th>
+                                                <th style="width:5%">Qtd</th>
+                                                <th style="width:15%">Valor de compra</th>
+                                                <th style="width:15%">V. sugerido para venda</th>
+                                                <th style="width:15%">Margem de contribuição (em %)</th>
+                                                <th style="width:10%">Margem de lucro bruto</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr *ngFor="let produto of produtos; let rowIndex=index">
+                                                <td>{{produto.descricao}}</td>
+                                                <td>{{produto.quantidade}}</td>
+                                                <td>{{produto.valorUnitario}}</td>
+                                                <td><input type="number" [(ngModel)]="produto.valorFinal" (change)="atualizarMargemContribuicao(produto)"
+                                                        name="valorFinal{{rowIndex}}" /></td>
+                                                <td><input type="number" [(ngModel)]="produto.margemContribuicao" (change)="atualizarMargemContribuicao(produto)"
+                                                        name="margemContribuicao{{rowIndex}}" disabled/></td>
+                                                <td>{{((produto.valorUnitario/produto.valorFinal)*100).toFixed(2)}}%</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </form>
+                            </div>
+                        </div>
+
+                    </div>
+                    </div>
+                    <ng-template #elseBlockAgreement>
+                        <div class="well">
+                            {{agreementMessage}}
+                        </div>
+                    </ng-template>
+                    <ng-template #elseBlock>
+                        <div class="well">
+                            {{emptyDanfeMessage}}
+                        </div>
+                    </ng-template>
+
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+
+</form>
