improved variable name

--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -9,7 +9,7 @@
                 <li role="presentation" class="active" ><a href="#home" aria-controls="home" role="tab" data-toggle="tab" class="home">Home</a></li>
                 <li role="presentation"><a href="#danfe" class="tabLink" aria-controls="danfe" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-upload"></span> Importar NFE (XML)</a></li>
                 <li role="presentation"><a href="#costs" class="tabLink" aria-controls="costs" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-minus-sign"></span> Custos do produto</a></li>
-                <li role="presentation"><a href="#contribution" class="tabLink" aria-controls="contribution" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-plus-sign"></span> Margem de lucro e contribuição</a></li>
+                <li role="presentation"><a href="#contribution" class="tabLink" aria-controls="contribution" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-plus-sign"></span> Margem de contribuição</a></li>
                 <li role="presentation"><a href="#calculation" class="tabLink" aria-controls="calculation" role="tab" data-toggle="tab"><span class="glyphicon glyphicon-check"></span> Calcular preços</a></li>
             </ul>
 
