updated index.html to fix google bot problem

--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -25,7 +25,7 @@
                         <div class="row" style="margin-bottom:50px;">
                             <div class="col-md-4  text-center">
                                 <div class="row">
-                                    <img src="../../assets/economia_tempo.png" />
+                                    <img src="../../assets/economia_tempo.png" alt="Ganhe tempo com o cálculo automático dos preços dos seus produtos."/>
                                 </div>
                                 <div class="row" style="margin-top:20px">
                                     <span class="advantages-header">Economia de tempo</span>
@@ -36,7 +36,7 @@
                             </div>
                             <div class="col-md-4 text-center">
                                 <div class="row">
-                                    <img src="../../assets/calculo_automatico.png" />
+                                    <img src="../../assets/calculo_automatico.png" alt="Calcular o preço de vários produtos nunca foi tão fácil!"/>
                                 </div>
                                 <div class="row" style="margin-top:20px">
                                     <span class="advantages-header">Cálculo automático</span>
@@ -47,7 +47,7 @@
                             </div>
                             <div class="col-md-4 text-center">
                                 <div class="row">
-                                    <img src="../../assets/gratis.png" />
+                                    <img src="../../assets/gratis.png" alt="Nosso serviço de cálculo de preço de produtos é gratuito!"/>
                                 </div>
                                 <div class="row" style="margin-top:20px">
                                     <span class="advantages-header">Serviço gratuito</span>
@@ -61,15 +61,15 @@
                     
                         <table style="margin: auto;">
                             <tr>
-                                <td><img src="../../assets/upload_danfe.png" class="iconUsageAlignment"/></td>
+                                <td><img src="../../assets/upload_danfe.png" alt="Todo o cálculo é realizado a partir dos produtos de sua DANFE." class="iconUsageAlignment"/></td>
                                 <td><span class="how-to-use-header">Importe a sua NFE (DANFE)</span></td>
                             </tr>
                             <tr>
-                                <td><img src="../../assets/custos_produtos.png" class="iconUsageAlignment"/></td>
+                                <td><img src="../../assets/custos_produtos.png" alt="O cálculo considera informações sobre o valor do frete, IPI, comissões de vendas, entre outros." class="iconUsageAlignment"/></td>
                                 <td><span class="how-to-use-header">Informe os seus custos básicos</span></td>
                             </tr>
                             <tr>
-                                <td><img src="../../assets/margem_de_contribuicao.png" class="iconUsageAlignment"/></td>
+                                <td><img src="../../assets/margem_de_contribuicao.png" alt="Defina o ganho bruto que deseja para cada produto e o resto é conosco!" class="iconUsageAlignment"/></td>
                                 <td><span class="how-to-use-header">Defina a margem de contribuição desejada</span></td>
                             </tr>
                         </table>
